<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo2"
            />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="108dp"
            android:text="@string/sologan"
            android:textSize="20sp"
            android:textColor="#0AC1E0"
            android:textStyle="bold"
            />

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/button1"
        android:padding="20dp"
        android:text="@string/button1"
        android:textColor="#ffff"
        android:textSize="15sp" />
        <Button
            android:id="@+id/b2"
            android:layout_above="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input"
            android:text="@string/button2"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:padding="20dp"
            />
    </RelativeLayout>


