<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/home"
    tools:context=".LoginActivity">




    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:maxLines="1"
            android:textAlignment="center"
            android:background="@drawable/input"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"/>



        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:textAlignment="center"
            android:imeActionLabel="sign in"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/input"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button1"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textColor="#ffff"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>


